--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,11 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
-
-    <FrameLayout
-        android:id="@+id/contenedorFragments"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    tools:context=".MenuActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
