--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -3,40 +3,56 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
 android:layout_width="match_parent"
-android:layout_height="wrap_content"
+android:layout_height="match_parent"
 android:layout_margin="16dp"
 android:padding="16dp">
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:id="@+id/cardfragment"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/gris_fuerte">
+
+    <Button
+        android:id="@+id/btncerrar"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:text="X"
+        android:backgroundTint="@color/teal_700"
+        android:textColor="@android:color/white"
+        android:layout_gravity="right"/>
+
 
     <TextView
+        android:layout_marginTop="200dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registro de Usuarios"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_gravity="center"
-        android:paddingBottom="12dp"/>
+        android:paddingBottom="12dp"
+        android:textColor="@color/black"/>
 
     <Button
         android:id="@+id/btnRegistrarMecanico"
-        android:layout_width="match_parent"
+        android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:text="Registrar Mecánico"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:layout_gravity="center"/>
 
     <Button
-        android:id="@+id/btnRegistrarVehiculista"
-        android:layout_width="match_parent"
+        android:id="@+id/btnRegistrarConductor"
+        android:layout_width="225dp"
         android:layout_height="wrap_content"
-        android:text="Registrar Vehiculista"
+        android:text="Registrar Conductor"
         android:backgroundTint="@color/teal_700"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
 
