--- a/app/src/main/res/layout/regristrar_mecanico_fragment.xml
+++ b/app/src/main/res/layout/regristrar_mecanico_fragment.xml
@@ -8,6 +8,14 @@
         android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/btncerrarregmec"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:text="X"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="@android:color/white"
+            android:layout_gravity="right"/>
 
         <EditText
             android:id="@+id/correo"
