--- a/app/src/main/res/layout/fragment_notas.xml
+++ b/app/src/main/res/layout/fragment_notas.xml
@@ -24,18 +24,18 @@
         android:textColorHint="#444444"
         android:padding="16dp"
         android:minHeight="48dp"
-        android:backgroundTint="#FB8C00"/>
+        android:background="@android:drawable/edit_text"/>
 
     <EditText
         android:id="@+id/edtDescripcion"
         android:hint="Descripción"
         android:textColor="#000000"
         android:textColorHint="#444444"
-        android:backgroundTint="#FB8C00"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:gravity="top"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:background="@android:drawable/edit_text"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -90,4 +90,3 @@
     </LinearLayout>
 
 </LinearLayout>
-
